--- a/server/package.json
+++ b/server/package.json
@@ -13,7 +13,10 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^1.4.0",
-    "express": "^4.18.2"
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "node-cron": "^3.0.2",
+    "pg-promise": "^11.5.0"
   },
   "devDependencies": {
     "cors": "^2.8.5",
