--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,7 @@
     "react-dom": "^18.2.0",
     "react-draggable": "^4.4.5",
     "react-scripts": "5.0.1",
+    "react18-json-view": "^0.0.8",
     "reactflow": "^11.7.4",
     "web-vitals": "^2.1.4"
   },
