--- a/client/package.json
+++ b/client/package.json
@@ -6,10 +6,13 @@
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@mui/material": "^5.13.6",
+    "@mui/x-data-grid": "^6.9.1",
     "@mui/x-date-pickers": "^6.9.1",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@uiw/codemirror-extensions-langs": "^4.21.7",
+    "@uiw/react-codemirror": "^4.21.7",
     "axios": "^1.4.0",
     "dayjs": "^1.11.9",
     "immutability-helper": "^3.1.1",
@@ -18,12 +21,11 @@
     "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18.2.0",
     "react-draggable": "^4.4.5",
+    "react-router-dom": "^6.14.1",
     "react-scripts": "5.0.1",
     "react18-json-view": "^0.0.8",
     "reactflow": "^11.7.4",
-    "web-vitals": "^2.1.4",
-    "@uiw/codemirror-extensions-langs": "^4.21.7",
-    "@uiw/react-codemirror": "^4.21.7"
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
