--- a/client/package.json
+++ b/client/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@mui/lab": "^5.0.0-alpha.135",
     "@mui/material": "^5.13.6",
     "@mui/x-data-grid": "^6.9.1",
     "@mui/x-date-pickers": "^6.9.1",
