--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     "dayjs": "^1.11.9",
     "immutability-helper": "^3.1.1",
     "lucide": "^0.259.0",
+    "lucide-react": "^0.259.0",
     "react": "^18.2.0",
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
