--- a/client/package.json
+++ b/client/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@mui/lab": "^5.0.0-alpha.135",
     "@mui/material": "^5.13.6",
     "@mui/x-data-grid": "^6.9.1",
     "@mui/x-date-pickers": "^6.9.1",
@@ -16,6 +17,8 @@
     "axios": "^1.4.0",
     "dayjs": "^1.11.9",
     "immutability-helper": "^3.1.1",
+    "lucide": "^0.259.0",
+    "lucide-react": "^0.259.0",
     "react": "^18.2.0",
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
