--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,8 @@
     "@mui/material": "^5.13.6",
     "@mui/x-data-grid": "^6.9.1",
     "@mui/x-date-pickers": "^6.9.1",
+    "@reactflow/background": "^11.2.4",
+    "@reactflow/controls": "^11.1.15",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
