--- a/server/package.json
+++ b/server/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^1.4.0",
+    "axios-oauth-client": "^2.0.2",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "node-cron": "^3.0.2",
