--- a/server/package.json
+++ b/server/package.json
@@ -16,6 +16,7 @@
     "axios-oauth-client": "^2.0.2",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "mongodb": "^5.7.0",
     "node-cron": "^3.0.2",
     "pg-promise": "^11.5.0"
   },
