--- a/server/package.json
+++ b/server/package.json
@@ -6,6 +6,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "nodemon src/index.js",
+    "start": "src/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
