--- a/client/package.json
+++ b/client/package.json
@@ -37,7 +37,8 @@
   "scripts": {
     "build": "NODE_ENV=PRODUCTION HTTPS=true SSL_CRT_FILE=../server/otto_cert/cert.pem SSL_KEY_FILE=../server/otto_cert/key.pem react-scripts build",
     "start": "NODE_ENV=DEVELOPMENT react-scripts start",
-    "test": "react-scripts test",
+    "test": "react-scripts test --transformIgnorePatterns 'node_modules/(?!my-library-dir)/'",
+    "test:coverage": "react-scripts test --coverage --watchAll=false",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
