--- a/server/package.json
+++ b/server/package.json
@@ -18,6 +18,7 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "mongodb": "^5.7.0",
+    "mongodb-memory-server": "^8.13.0",
     "node-cron": "^3.0.2",
     "pg-promise": "^11.5.0",
     "supertest": "^6.3.3"
@@ -28,5 +29,8 @@
     "jest": "^29.6.1",
     "nodemon": "^2.0.22",
     "oauth2-mock-server": "^6.0.0"
+  },
+  "jest": {
+    "testEnvironment": "node"
   }
 }
