--- a/client/package.json
+++ b/client/package.json
@@ -58,5 +58,11 @@
       "last 1 safari version"
     ]
   },
-  "homepage": "./"
+  "homepage": "./",
+  "devDependencies": {
+    "eslint": "^8.45.0",
+    "eslint-plugin-jest": "^27.2.3",
+    "eslint-plugin-material-ui": "^1.0.1",
+    "eslint-plugin-react": "^7.33.0"
+  }
 }
