--- a/server/package.json
+++ b/server/package.json
@@ -26,6 +26,8 @@
   "devDependencies": {
     "@babel/plugin-transform-modules-commonjs": "^7.22.5",
     "cors": "^2.8.5",
+    "eslint": "^8.45.0",
+    "eslint-plugin-jest": "^27.2.3",
     "jest": "^29.6.1",
     "nodemon": "^2.0.22",
     "oauth2-mock-server": "^6.0.0"
