--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -3,7 +3,7 @@ version: "3"
 services:
   app:
     restart: on-failure
-    build: .
+    image: otto2305/otto_etl
     depends_on:
       - postgres
     environment:
@@ -18,7 +18,7 @@ services:
       - "3001:3001"
     command: npm start
     volumes:
-      - .:/app/
+      - init:/app/docker-entrypoint-initdb.d
       - /app/node_modules
 
   postgres:
@@ -32,7 +32,8 @@ services:
       PGHOST: postgres
     volumes:
       - pgdata:/var/lib/postgresql/data
-      - ./docker-entrypoint-initdb.d/setup.sql:/docker-entrypoint-initdb.d/setup.sql
+      - init:/docker-entrypoint-initdb.d
 
 volumes:
   pgdata: {}
+  init: {}
