--- a/server/package.json
+++ b/server/package.json
@@ -13,15 +13,19 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.400.0",
+    "aws-sdk": "^2.1445.0",
     "axios": "^1.4.0",
     "axios-oauth-client": "^2.0.2",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "memfs": "^4.2.1",
     "mongodb": "^5.7.0",
     "mongodb-memory-server": "^8.13.0",
     "node-cron": "^3.0.2",
     "pg-promise": "^11.5.0",
-    "supertest": "^6.3.3"
+    "supertest": "^6.3.3",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@babel/plugin-transform-modules-commonjs": "^7.22.5",
